deploy/reranker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bge-reranker-v2-m3
  namespace: reranker-model
spec:
  selector:
    app: bge-reranker-v2-m3
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
