deploy/reranker/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bge-reranker-v2-m3
  namespace: reranker-model
spec:
  to:
    kind: Service
    name: bge-reranker-v2-m3
  port:
    targetPort: 8080
  tls:
    termination: edge
